# tp_alla_ismail

./: .gitignore  README.md
backend_Flask/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend_fastapi/: Dockerfile  config.py  database.py  main.py  models.py  requirements.txt  schemas.py
front_end_vueJs/: README.md
front_end_vueJs/front/: docker_entrypoint.sh  dockerfile  env-config.js  generate_env-config.sh  package-lock.json  package.json
front_end_vueJs/front/src/DB/: db.json
front_end_vueJs/front/src/views/: AboutView.vue  HomeView.vue
les_yamls/: README.md
les_yamls/yamlsBackend/: 7.fastapi.yaml  8.sevice-fast.yaml
les_yamls/yamlsFront/: 10.service_vue.yaml  9.deployment_vue.yaml  9.deployment_vue.yamly
les_yamls/yamls_DB/: 1.storage-class-postgres.yaml  2.pv-postgres.yaml  3.pvc-postgres.yaml  4.config-map-postgres-Fast.yaml  5.statefulset-postgres.yaml  6.service-postgres.yaml
