[tool.poetry]
name = "backend-flask"
version = "0.1.0"
description = ""
authors = ["alla ismail <wwwallaismail@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
